c4prj2_input/grade.txt
Grading at Wed Mar 10 22:19:59 UTC 2021
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘hand_from_string’:
input.c:24:36: error: passing argument 1 of ‘card_from_letters’ makes integer from pointer without a cast [-Werror=int-conversion]
       card_t c = card_from_letters(j-2,j-1);
                                    ^
In file included from deck.h:4:0,
                 from input.c:5:
cards.h:37:8: note: expected ‘char’ but argument is of type ‘char *’
 card_t card_from_letters(char value_let, char suit_let);
        ^
input.c:24:40: error: passing argument 2 of ‘card_from_letters’ makes integer from pointer without a cast [-Werror=int-conversion]
       card_t c = card_from_letters(j-2,j-1);
                                        ^
In file included from deck.h:4:0,
                 from input.c:5:
cards.h:37:8: note: expected ‘char’ but argument is of type ‘char *’
 card_t card_from_letters(char value_let, char suit_let);
        ^
cc1: all warnings being treated as errors
Compilation of input.c failed

Overall Grade: F
